--- a/Tendy/Base.lproj/LaunchScreen.storyboard
+++ b/Tendy/Base.lproj/LaunchScreen.storyboard
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,26 +17,26 @@
                         <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="Ze5-6b-2t3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="pVc-sY-faI">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="pVc-sY-faI">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="pVc-sY-faI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerXWithinMargins" id="01z-EC-Eei"/>
-                            <constraint firstItem="pVc-sY-faI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="J7X-U2-EEA"/>
-                            <constraint firstItem="pVc-sY-faI" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="ZJG-Qm-jdl"/>
-                            <constraint firstItem="pVc-sY-faI" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="rqy-II-3vZ"/>
+                            <constraint firstItem="pVc-sY-faI" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Esw-y6-DU8"/>
+                            <constraint firstItem="pVc-sY-faI" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="MHj-pg-fyU"/>
+                            <constraint firstAttribute="trailing" secondItem="pVc-sY-faI" secondAttribute="trailing" id="hFE-tL-hgr"/>
+                            <constraint firstItem="pVc-sY-faI" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="riA-FQ-zkz"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
     <resources>
